[tool.poetry]
name = "featurizer"
version = "0.1.0"
description = "generic package to handle pipelining features and feature transformations"
authors = ["Kaies Lamiri <kaies.lamiri@outlook.com>"]
license = "BSD 2"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
