[tool.poetry]
name = "featurizer"
version = "0.1.0"
description = "generic package to handle pipelining features and feature transformations"
authors = ["Kaies Lamiri <kaies.lamiri@outlook.com>"]
license = "BSD 2"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.0"
# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
pandas = { version = "^1.3.3", optional = true }


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "*"

[tool.poetry.extras]
action_maps = ["pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
